RESOLVED FIXED115968
[Mac] The captions menu should not use a canned max-width and max-height
https://bugs.webkit.org/show_bug.cgi?id=115968
Summary [Mac] The captions menu should not use a canned max-width and max-height
Antoine Quint
Reported 2013-05-11 13:41:15 PDT
Currently, the captions menu (::-webkit-media-controls-closed-captions-track-list) has "max-width" and "max-height" set to 250px. When the captions name are long, it may happen that the name of the caption is clipped even though there is plenty of space available to display the full title over the video. The max-width and max-height of the captions menu should be dependent on the available video real-estate.
Attachments
Patch (3.17 KB, patch)
2013-05-11 13:45 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2013-05-11 13:41:33 PDT
Antoine Quint
Comment 2 2013-05-11 13:45:51 PDT
WebKit Commit Bot
Comment 3 2013-05-11 14:42:03 PDT
Comment on attachment 201470 [details] Patch Clearing flags on attachment: 201470 Committed r149942: <http://trac.webkit.org/changeset/149942>
WebKit Commit Bot
Comment 4 2013-05-11 14:42:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.